--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,8 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    namespace "com.zt.shareextend"
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion 19
